[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-material[imaging]>=9.6.3",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.2",
    "mkdocstrings>=0.28.0",
    "mkdocstrings-python>=1.15.0",
    "pymdown-extensions>=10.14.3",
]
